Fix scrollbar margin revealing background

--- a/web/styles/embed/styles.scss
+++ b/web/styles/embed/styles.scss
@@ -58,11 +58,14 @@ body {
 #user-code-editor, #solution-editor, #test-editor, #html-editor, #solution-editor {
   flex: 1;
   width: 100%;
-  margin-right: 8px;
 }
 
 .CodeMirror-hints {
   max-height: 11em;
+}
+
+.CodeMirror-simplescroll-vertical {
+  margin-right: 4px;
 }
 
 // Console
